--- a/public/index.html
+++ b/public/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOCKET SERVER</title>
+    <title>SocketServer</title>
 </head>
 <body>
-    <h1>ACCESO DENEGADO</h1>
+    <h1>Acceso denegado</h1>
+
+    <script src="socket.io/socket.io.js"></script>
+
+    <script>
+        var socket = io();
+
+        socket.on('connect', function() {
+            console.log('Conectado al servidor')
+        });
+
+        socket.on('disconnect', function() {
+            console.log('Perdimos comunicación con el servidor');
+        });
+
+
+        socket.emit('mensaje', { nombre: 'Fernando' } );
+
+        socket.on('mensaje', function( payload ){
+            console.log('Escuhando:', payload );
+        });
+
+
+    </script>
+
 </body>
-
-<script src="socket.io/socket.io.js"></script>
-
-<script>
-    var socket = io();
-
-    socket.on('connect', function(){
-        console.log("cliente conectado!!")
-    });
-
-    socket.on('disconnect', function(){
-        console.log("perdimos conexion!!")
-    });
-
-    socket.emit('mensaje', {nombre: "Juan Carlos"});
-
-    socket.on('mensaje', function(payload){
-        console.log("mensaje: ", payload);
-    })
-
-
-</script>
-
 </html>
